# clearplot

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST  README.md  pyproject.toml  release_checklist.txt  setup.py
clearplot/: __init__.py  axes.py  axis_label.py  color_bar.py  colors.py  custom_annotations.py  custom_colormaps.pkl  figure.py  params.py  plot_functions.py  utilities.py
clearplot/color_maps/: BCC.csv  gray.csv  light_gray.csv  plain_blue.csv  plain_red.csv  rainbow-256.csv  rainbow-gray.csv  rainbow-no_black.csv  rainbow.csv  red_blue.csv  viridis.csv
doc/: Makefile  readthedocs-pip-requirements.txt  requirements.txt
doc/source/: conf.py  index.rst  installation.rst  version_history.rst
font_files/: What_to_do_with_these_files.rtf  What_to_do_with_these_files.txt
font_files/TeXGyreHeros-txfonts/: Notes_about_these_fonts.rtf
tests/: clearplot_tests.py  run_tests.py
tests/add_RGB_image_to_plot/: add_RGB_image_to_plot.py
tests/add_grayscale_image_to_plot/: add_grayscale_image_to_plot.py
tests/arrow_annotations/: arrow_annotations.py
tests/auto_ax_limits/: auto_ax_limits.py
tests/bar_plot/: bar_plot.py
tests/box_plot/: box_plot.py
tests/contour_lines-custom_levels/: contour_lines-custom_levels.py
tests/contour_plot-background_image/: contour_plot-background_image.py
tests/contour_plot-background_position/: contour_plot-background_position.py
tests/contour_plot-custom_levels/: contour_plot-custom_levels.py
tests/contour_plot-log_scaled_image/: contour_plot-log_scaled_image.py
tests/fill_between_curves/: fill_between_curves.py
(+92 files in other folders)
