[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearplot"
version = "1.3.1"
description = "Clearplot creates publication quality plots using matplotlib"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Benjamin Reedlunn", email = "breedlun@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.3.0",
    "numpy>=1.6"
]
keywords = ["matplotlib", "plotting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls] 
Homepage = "http://clearplot.readthedocs.org" 
Source = "https://github.com/breedlun/clearplot"

[tool.setuptools.packages.find]
where = ["."]
include = ["clearplot*"]

[tool.setuptools.package-data]
clearplot = [
    "color_maps/*.csv",
    "true_type_fonts/*.ttf"
]
